--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,9 +1,9 @@
 <div class="container__small-card">
   <div class="small-card__photo">
-    <img src="../../../assets/sorrindo.jpeg" alt="">
+    <img src="{{cardImage}}" alt="">
   </div>
   <div class="small-card__title">
-    <p><a href="#">small-card works!</a></p>
+    <p><a href="#">{{cardTitle}}</a></p>
   </div>
 </div>
 <hr>
