--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,12 +4,25 @@
 <app-menu-title></app-menu-title>
 <div class="conteiner__articles">
   <div class="articles__main">
-    <app-big-card></app-big-card>
+    <app-big-card
+    cardImage="../../../assets/sorrindo.jpeg"
+    cardTitle="Leozão dá sorrizão em sala de aula chique"
+    cardDescription="Leozão dá sorrizão em sala de aula chique
+                     várias vezes repetidamente até completar
+                     um texto de bom tamaho"
+    ></app-big-card>
+      <app-big-card
+      cardImage="../../../assets/sorrindo.jpeg"
+      cardTitle="Leozão dá sorrizão em sala de aula chique"
+      cardDescription="Leozão dá sorrizão em sala de aula chique
+                       várias vezes repetidamente até completar
+                       um texto de bom tamaho"
+    ></app-big-card>
   </div>
   <div class="articles__small">
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
+    <app-small-card cardImage="../../../assets/sorrindo.jpeg" cardTitle="Leozão ri em várias fotos"></app-small-card>
+    <app-small-card cardImage="../../../assets/sorrindo.jpeg" cardTitle="Leozão ri em várias fotos"></app-small-card>
+    <app-small-card cardImage="../../../assets/sorrindo.jpeg" cardTitle="Leozão ri em várias fotos"></app-small-card>
   </div>
 
 </div>
