--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,14 +1,14 @@
 
   <div class="container__big-card">
     <div class="big-card__photo">
-      <img src="../../../assets/sorrindo.jpeg" alt="">
+      <img  src="{{cardImage}}" alt="">
     </div>
     <div class="big-card__title">
-      <h3><a href="#">Novo blog no pedaço</a></h3>
+      <h3><a href="#">{{cardTitle}}</a></h3>
     </div>
     <div class="big-card__description">
       <p>
-        Durante o curso que está rolando na Dio, pessoal está desenvolvendo um blog
+        {{cardDescription}}
       </p>
     </div>
   </div>
