content page finalized

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -4,7 +4,7 @@
       <img  src="{{cardImage}}" alt="">
     </div>
     <div class="big-card__title">
-      <h3><a href="#">{{cardTitle}}</a></h3>
+      <h3><a [routerLink]="['article', id]">{{cardTitle}}</a></h3>
     </div>
     <div class="big-card__description">
       <p>
