--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -3,7 +3,7 @@
     <img src="{{cardImage}}" alt="">
   </div>
   <div class="small-card__title">
-    <p><a href="#">{{cardTitle}}</a></p>
+    <p><a [routerLink]="['article', id]">{{cardTitle}}</a></p>
   </div>
 </div>
 <hr>
