--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,32 +1,22 @@
-<header>
-  <app-menu-bar></app-menu-bar>
-</header>
+
 <app-menu-title></app-menu-title>
 <div class="conteiner__articles">
   <div class="articles__main">
     <app-big-card
+    id="1"
     cardImage="../../../assets/sorrindo.jpeg"
     cardTitle="Leozão dá sorrizão em sala de aula chique"
     cardDescription="Leozão dá sorrizão em sala de aula chique
                      várias vezes repetidamente até completar
                      um texto de bom tamaho"
-    ></app-big-card>
-      <app-big-card
-      cardImage="../../../assets/sorrindo.jpeg"
-      cardTitle="Leozão dá sorrizão em sala de aula chique"
-      cardDescription="Leozão dá sorrizão em sala de aula chique
-                       várias vezes repetidamente até completar
-                       um texto de bom tamaho"
+    route="article"
     ></app-big-card>
   </div>
   <div class="articles__small">
-    <app-small-card cardImage="../../../assets/sorrindo.jpeg" cardTitle="Leozão ri em várias fotos"></app-small-card>
-    <app-small-card cardImage="../../../assets/sorrindo.jpeg" cardTitle="Leozão ri em várias fotos"></app-small-card>
-    <app-small-card cardImage="../../../assets/sorrindo.jpeg" cardTitle="Leozão ri em várias fotos"></app-small-card>
+    <app-small-card cardImage="../../../assets/sorrindo.jpeg" id="2" cardTitle="Leozão ri em várias fotos" route="article"></app-small-card>
+    <app-small-card cardImage="../../../assets/sorrindo.jpeg" id="3" cardTitle="Leozão ri em várias fotos" route="article"></app-small-card>
+    <app-small-card cardImage="../../../assets/sorrindo.jpeg" id="4" cardTitle="Leozão ri em várias fotos" route="article"></app-small-card>
   </div>
 
 </div>
 
-<footer>
-
-</footer>
