--- a/src/app/components/menu-bar/menu-bar.component.css
+++ b/src/app/components/menu-bar/menu-bar.component.css
@@ -1,6 +1,7 @@
 .container__menu-bar > ul{
   display: flex;
   flex-direction: row;
+  justify-content: center;
 }
 
 .container__menu-bar ul > li > a {
@@ -12,3 +13,12 @@
   list-style: none;
 }
 
+hr {
+  width: 100vw;
+  margin-top: 30px;
+  border-color: darkgray;
+}
+
+.container__menu-bar {
+  margin-top: 30px;
+}
