--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,10 +1,14 @@
-<div class="container__menu-bar">
-  <ul>
-    <li><a href="">Linkedin</a></li>
-    <li><span>•</span></li>
-    <li><a href="">Github</a></li>
-    <li><span>•</span></li>
-    <li><a href="">Youtube</a></li>
-  </ul>
-
+<div>
+  <div class="container__menu-bar">
+    <ul>
+      <li><a href="">Linkedin</a></li>
+      <li><span>•</span></li>
+      <li><a href="">Github</a></li>
+      <li><span>•</span></li>
+      <li><a href="">Youtube</a></li>
+    </ul>
+  </div>
+  <div>
+    <hr>
+  </div>
 </div>
